# zinq-agent-sdk

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: api-reference.md  best-practices.md  business-agents.md  deployment.md  dev-guide-marketplace-tier1.md  dev-guide-marketplace-tier2.md  dev-guide-personal.md  dev-guide-testing.md  examples.md  getting-started.md  webhooks.md
examples/: README.md  appointment_bot.py  echo_bot.py  personal_shopper.py  trading_bot.py
examples/dr_sarah_nutrition/: README.md  agent.yaml  server.py
examples/joes_barber/: README.md  agent.yaml  server.py
examples/rosas_bakery/: README.md  agent.yaml  morning_update.py  rosa.yaml  rosa_server.py  server.py  setup_rosa.py  start.sh
examples/sentinel/: PROMPT.md  README.md  TODO.md  auth_gmail.py  config.py  gmail_monitor.py  requirements.txt  sentinel.py  sentinel.service  slack_monitor.py  summarizer.py
spec/: MARKETPLACE_AGENTS.md  MARKETPLACE_AGENT_FLOW.md  TIER1_NO_CODE_AGENTS.md
tests/: test_client.py  test_webhook.py
tests/e2e/: README.md  conftest.py  test_bakery_example.py  test_barber_example.py  test_marketplace_agent.py  test_nutrition_example.py  test_personal_agent.py  test_sentinel_example.py  test_trading_example.py
zinq_agent/: __init__.py  client.py  exceptions.py  gemini.py  marketplace.py  models.py  utils.py  webhook.py
